spawn rebalance, ui work, fix mending xp bug